work on the login entry point. we got the login form setup. we implemented authentification. we need to work on the signup form. in the layout, we make sure that our navbar behave differently base on if the user is logged in. we are going to setup the signup form and entry point (controllers). to wrappup the clients (user controllers).

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -217,6 +217,8 @@ p {
     min-height: 100%;
 }
 
+
+
 /* main footer */
 #main-footer {
     text-align: center;
@@ -282,4 +284,11 @@ p {
 
 #contact-form .container .form-group textarea {
     height: 200px;
+}
+
+/* flash */
+flash {
+    color: #33C6B6;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
